# simple_bank

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
bank/: models.py  services.py
bank/api/: serializers.py  urls.py  views.py
bank/migrations/: 0001_initial.py  0002_transaction.py
bank/tests/: test_api.py  test_services.py
simple_bank/: asgi.py  settings.py  urls.py  wsgi.py
