[project]
name = "simple-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy",email = "dmitriy.trochshenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "coverage (>=7.10.7,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
